fix(calendar): do not flex stretch calendar tables

--- a/packages/default/scss/calendar/_layout.scss
+++ b/packages/default/scss/calendar/_layout.scss
@@ -224,6 +224,7 @@
     .k-calendar-table.k-calendar-content {
         display: inline-table;
         vertical-align: top;
+        flex: none;
     }
 
 
